@@ -9,6 +9,7 @@ VERSION 1.1.6 (??? ?? ??:?? 2004)
 - show_disk_usage() now exits the program directly instead of returning a
   value
 - "0" can now be used as a valid interval name
+- Config error messages now wrap before 80 columns.
 
 VERSION 1.1.5 (Jun 20 20:56 2004)
 ------------------------------------------------------------------------------
